Configure (very) basic backend and auth
