# apps/server/src/api/contract/groups/workspace.ts
@@ -1,11 +1,10 @@
-import { HttpApiEndpoint, HttpApiGroup } from '@effect/platform';
+import { HttpApiEndpoint, HttpApiError, HttpApiGroup } from '@effect/platform';
 import { Schema } from 'effect';
 import { CreateWorkspaceRequest } from '~/models/workspace.model';
-import { InternalServerError } from '../error';
 
 export const WorkspaceGroup = HttpApiGroup.make('Workspace').add(
   HttpApiEndpoint.post('CreateWorkspace')`/workspace`
     .setPayload(CreateWorkspaceRequest)
     .addSuccess(Schema.Struct({}))
-    .addError(InternalServerError)
+    .addError(HttpApiError.InternalServerError)
 );
